templates/onlyoffice-ds_template.yaml
---
# Source: onlyoffice-ds/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-onlyoffice-ds
  labels:
    helm.sh/chart: onlyoffice-ds-1.0.0
    app.kubernetes.io/name: onlyoffice-ds
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0.204"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: onlyoffice-ds
    app.kubernetes.io/instance: release-name
---
# Source: onlyoffice-ds/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-onlyoffice-ds
  labels:
    helm.sh/chart: onlyoffice-ds-1.0.0
    app.kubernetes.io/name: onlyoffice-ds
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0.204"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: onlyoffice-ds
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: onlyoffice-ds
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: onlyoffice-ds
          securityContext:
            {}
          image: "onlyoffice/documentserver:7.2.0.204"
          imagePullPolicy: IfNotPresent
          ports:
            - name: oo-ds-http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: oo-ds-http
          readinessProbe:
            httpGet:
              path: /
              port: oo-ds-http
          resources:
            {}
---
# Source: onlyoffice-ds/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-onlyoffice-ds
  labels:
    helm.sh/chart: onlyoffice-ds-1.0.0
    app.kubernetes.io/name: onlyoffice-ds
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0.204"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
---
# Source: onlyoffice-ds/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-onlyoffice-ds-test-connection"
  labels:
    helm.sh/chart: onlyoffice-ds-1.0.0
    app.kubernetes.io/name: onlyoffice-ds
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0.204"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-onlyoffice-ds:80/']
  restartPolicy: Never
